--- a/src/components/psk-mobile/psk-mobile.css
+++ b/src/components/psk-mobile/psk-mobile.css
@@ -1,5 +1,10 @@
 /* Use mode="layout" for psk-mobile, if you want to style anything from component children */
 /* Use mode="default" with !important specifier if you want to override defaults from (Cardinal) styles/imports/colors.css */
+:host footer {
+    border-top: 1px solid #FFFFFF;
+    background-color: #FFFFFF;
+}
+
 :host(.pdfViewer) main,
 :host(.noPadding) main{
     padding: 0!important;
