--- a/src/components/psk-button-link/psk-button-link.css
+++ b/src/components/psk-button-link/psk-button-link.css
@@ -1,16 +1,8 @@
-[slot='footer'] {
-    border-top: 1px solid #EFEFEF;
-    background-color: #FFFFFF;
+:host(.footer-item) div,
+:host(.footer-item) psk-icon .icon {
+    color: #4461B5 !important;
 }
-
-[slot='footer'] psk-link > *,
-[slot='footer'] psk-link .icon {
-    padding: 0;
-    margin: 0;
-    color: #4461B5;
-}
-
-[slot='footer'] psk-link .icon.fa {
+:host(.footer-item) psk-icon .icon {
     font-size: x-large !important;
 }
 
