--- a/src/components/psk-link/psk-link.css
+++ b/src/components/psk-link/psk-link.css
@@ -9,7 +9,7 @@
 .btn-link {
     /* color: #3a3b41;
     text-decoration: underline; */
-    color: #007bff;
+    color: #4461B5;
     text-decoration: none;
 }
 
