--- a/src/components/psk-img/psk-img.css
+++ b/src/components/psk-img/psk-img.css
@@ -22,6 +22,7 @@ img {
 }
 
 .image_wrapper {
-    margin-bottom: 5px;
-    margin-top: 5px;
+    margin-bottom: 0!important;
+    margin-top: 0!important;
 }
+
