--- a/src/components/psk-layout/psk-layout.css
+++ b/src/components/psk-layout/psk-layout.css
@@ -1,5 +1,5 @@
 :host(.coloredBackground){
-    background-color: #c8e1bd !important;
+    background-color: #c8ecf8 !important;
 }
 :host(.topPadding) {
     padding-top: 50px;
