--- a/src/components/psk-label/psk-label.css
+++ b/src/components/psk-label/psk-label.css
@@ -7,3 +7,8 @@ psk-label{
     align-items: center;
 }
 
+.drugName {
+    color: black !important;
+    font-size: 23px !important;
+    font-weight: bold !important;
+}
