--- a/src/components/psk-user-profile-renderer/psk-user-profile-renderer.css
+++ b/src/components/psk-user-profile-renderer/psk-user-profile-renderer.css
@@ -5,6 +5,7 @@
     grid-template-columns: 60px 1fr;
     text-align: left !important;
     column-gap: 10px;
+    padding-left: 50px;
 }
 
 img {
@@ -15,6 +16,7 @@ p,
 .card-body.text-center h5 {
     margin: 0;
     padding: 0;
+    color: white;
 }
 
 h5 {
