minor theme changes

--- a/src/components/psk-label/psk-label.css
+++ b/src/components/psk-label/psk-label.css
@@ -8,7 +8,7 @@ psk-label{
 }
 
 .drugName {
-    color: black !important;
-    font-size: 23px !important;
+    color: #00345B !important;
+    font-size: 21px !important;
     font-weight: bold !important;
 }
