--- a/src/components/psk-mobile/psk-mobile.css
+++ b/src/components/psk-mobile/psk-mobile.css
@@ -41,7 +41,7 @@
     min-height: 39px !important;
 }
 
-:host(.background) main {
+/* :host(.background) main {
     background-image: url('/assets/images/Favorite.png');
     height: 100%;
-}
+}  */
