--- a/src/components/psk-button-link/psk-button-link.css
+++ b/src/components/psk-button-link/psk-button-link.css
@@ -9,6 +9,7 @@
 .xxlIcon .fa {
     font-size: 40px;
     text-align: center;
+    
 }
 
 .redIcon .fa {
@@ -30,4 +31,5 @@
 
 div {
     color: black;
+    text-align-last: center!important;
 }
