--- a/src/components/psk-card/psk-card.css
+++ b/src/components/psk-card/psk-card.css
@@ -121,7 +121,7 @@
     list-style-type: none;
 }
 
-ol>li::before {
+ol > li::before {
     content: counter(li) ". ";
     counter-increment: li;
     color: #4C71DE;
@@ -165,38 +165,44 @@ ol>li::before {
     margin-top: 5rem;
 }
 
-@media (max-width: 960px) {
-    .card.psk-card, .image_container, .psk-description {
-        padding: 10px 5px 5px;
-    }
-    /** first level*/
-    .psk-card .card-header {
-        padding: 5px 0px;
-    }
-    .psk-card .card-header h5 {
-        font-size: 1.125rem;
-    }
-    .psk-card h1 {
-        font-size: 1.3125rem;
-    }
-    /** second level*/
-    .psk-card .psk-card .card-header h5 {
-        font-size: 0.875rem;
-        font-weight: bold;
-    }
-    .psk-card .card-body {
-        padding: 5px 0px;
-        font-size: 0.875rem;
-    }
-    .psk-card .card-body div {
-        padding-top: 0.5rem;
-    }
-    .psk-card#not-available .card-header h5 {
-        font-size: 1.266rem;
-    }
-    .psk-card#not-available .card-body {
-        font-size: 1rem;
-    }
+.card.psk-card, .image_container, .psk-description {
+    padding: 0 !important;
+}
+
+/** first level*/
+.psk-card .card-header {
+    padding: 5px 0px;
+}
+
+.psk-card .card-header h5 {
+    font-size: 1.125rem;
+}
+
+.psk-card h1 {
+    font-size: 1.3125rem;
+}
+
+/** second level*/
+.psk-card .psk-card .card-header h5 {
+    font-size: 0.875rem;
+    font-weight: bold;
+}
+
+.psk-card .card-body {
+    padding: 5px 0px;
+    font-size: 0.875rem;
+}
+
+.psk-card .card-body div {
+    padding-top: 0.5rem;
+}
+
+.psk-card#not-available .card-header h5 {
+    font-size: 1.266rem;
+}
+
+.psk-card#not-available .card-body {
+    font-size: 1rem;
 }
 
 /* page: Cardinal/cheatsheet */
@@ -208,7 +214,8 @@ ol>li::before {
 .cheatsheet-item .card.psk-card,
 .cheatsheet-item .card.psk-card .card-header,
 .cheatsheet-item .card.psk-card .card-body ul {
-    padding: 0; margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .cheatsheet-item .card.psk-card .card-header h5 {
