--- a/src/components/psk-example/psk-example.css
+++ b/src/components/psk-example/psk-example.css
@@ -1,8 +1,8 @@
 :host(.app-example) .example-content,
 :host(.mobile-example) .card-body {
     background-color: #5E7FE111;
-    border: 1px solid #5E7FE122;
-    padding: 2rem;
+    /*border: 1px solid #5E7FE122;*/
+    /*padding: 2rem;*/
     width: 100%; height: 100%;
 }
 
@@ -17,11 +17,11 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
 }
 
-@media (max-width: 450px) {
-    :host(.mobile-example) .card-body {
-        margin: 0 -5px; padding: 0;
-        border: none;
-        background-color: transparent;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
-    }
-}
+/*@media (max-width: 450px) {*/
+/*    :host(.mobile-example) .card-body {*/
+/*        margin: 0 -5px; padding: 0;*/
+/*        border: none;*/
+/*        background-color: transparent;*/
+/*        box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);*/
+/*    }*/
+/*}*/
