Stable version of the new EPI-Theme Design

--- a/src/components/psk-details/psk-details.css
+++ b/src/components/psk-details/psk-details.css
@@ -6,19 +6,26 @@
     color: #4461B5;
 }
 
+:host([layout="collapsable"]) {
+    border-radius: 0 !important;
+}
+
 :host([layout="collapsable"]) .content {
-    background-color: #c8ecf8 !important;
+    background-color: #134E9E !important;
+    color: #FFFFFF;
 }
 
 :host([layout="collapsable"]) .footer {
-    background-color: #c8ecf8 !important;
+    background-color: #134E9E !important;
+    border-radius: 20px;
 }
 
 :host([layout="collapsable"]) .footer .icon {
-    color: #4461B5 !important;
+    color: #FFFFFF !important;
 }
 
 :host([layout="collapsable"][opened]),
 :host([layout="collapsable"][opened="true"]) {
-    box-shadow: rgba(0, 0, 0, 0.1) 0 3px 6px !important;
+    box-shadow: 0 0 0 !important;
+    border-radius: 0;
 }
