--- a/src/components/psk-accordion-item/psk-accordion-item.css
+++ b/src/components/psk-accordion-item/psk-accordion-item.css
@@ -8,13 +8,53 @@
     padding-right: 0.5em;
 }
 
+:host([layout="default"]) .title .rotated .icon,
+:host([layout="default"]) .title .icon {
+    display: none;
+}
+
+:host([layout="default"][opened]) .title,
+:host([layout="default"][opened="true"]) .title {
+    background-color: rgba(0, 0, 0, 0) !important;
+}
+
+:host([layout="default"][opened]) .title span,
+:host([layout="default"][opened="true"]) .title span {
+    color: #D6A229 !important;
+}
+
+:host([layout="default"]) .content {
+    margin-left: 40px;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: -0.5px;
+}
+:host {
+    color: #00345B !important;
+    margin-bottom: 10px;
+}
+
 :host .title .icon,
 :host .title span {
-    color: rgb(26, 27, 30) !important;
-    font-size: 14px !important;
+    color: #00345B !important;
+    font-size: 13px !important;
     font-weight: bolder !important;
 }
 
 :host([layout="default"]) .title:focus {
     border: 0 !important;
+}
+
+:host([layout="default"]) .title::before {
+    content: "          ";
+    white-space: pre;
+    text-decoration: line-through;
+    position: absolute;
+    color: #00345B;
+    padding-top: 20px;
+}
+
+:host([layout="default"][opened]) .title::before,
+:host([layout="default"][opened="true"]) .title::before {
+    color: #D6A229 !important;
 }
