--- a/src/components/psk-button-link/psk-button-link.css
+++ b/src/components/psk-button-link/psk-button-link.css
@@ -6,10 +6,18 @@
     font-size: x-large !important;
 }
 
+.xxlIcon {
+    width: 100px;
+    height: 100px;
+    padding: 10px;
+    border-radius: 3px;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.78);
+}
+
 .xxlIcon .fa {
     font-size: 40px;
     text-align: center;
-    
+    color: #00345B;
 }
 
 .redIcon .fa {
