--- a/src/components/psk-img/psk-img.css
+++ b/src/components/psk-img/psk-img.css
@@ -2,6 +2,15 @@ img {
     max-width: 100%;
 }
 
+.productItem_img img {
+    vertical-align: middle;
+}
+
+img.productStatusImg {
+    margin: auto;
+    padding: 5px 0;
+}
+
 .image_container {
     text-align: center;
 }
