--- a/src/components/sidebar-renderer/sidebar-renderer.css
+++ b/src/components/sidebar-renderer/sidebar-renderer.css
@@ -21,7 +21,6 @@ span.icon {
     width: 100%;
     position: relative;
     padding: 7px 10px 7px 20px;
-    border-top: 1px solid rgba(255, 255, 255, 0.40);
 }
 
 a,
@@ -33,22 +32,17 @@ a,
     font-weight: 600;
 }
 
+.item_container .item_name:before {
+    content: "       ";
+    white-space: pre;
+    text-decoration: line-through;
+    position: absolute;
+    color: #FFFFFF;
+    padding-top: 15px;
+}
+
 
 /* adding pointer */
-
-a.active .item_name::before {
-    content: "";
-    background-image: url(/themes/clear-sky-theme/images/hand-point.svg);
-    background-size: 100% 100%;
-    display: inline-block;
-    height: 20px;
-    width: 20px;
-    filter: invert(99%) sepia(3%) saturate(1419%) hue-rotate(225deg) brightness(123%) contrast(100%);
-    position: relative;
-    margin-left: -24px;
-    margin-right: 4px;
-    bottom: -5px;
-}
 
 a:hover,
 .item_container:hover>.item_name,
@@ -57,6 +51,10 @@ a.active .item_name {
     opacity: 85%;
 }
 
+a.active .item_name,
+a.active .item_name:before {
+    color: #D6A229;
+}
 
 /* no lines on subcategory */
 
