--- a/src/components/psk-accordion-item/psk-accordion-item.css
+++ b/src/components/psk-accordion-item/psk-accordion-item.css
@@ -8,6 +8,10 @@
     padding-right: 0.5em;
 }
 
+:host([layout="default"]) .title {
+    position: relative;
+}
+
 :host([layout="default"]) .title .rotated .icon,
 :host([layout="default"]) .title .icon {
     display: none;
