--- a/src/components/psk-mobile/psk-mobile.css
+++ b/src/components/psk-mobile/psk-mobile.css
@@ -1,6 +1,3 @@
-/* Use mode="layout" for psk-mobile, if you want to style anything from component children */
-/* Use mode="default" with !important specifier if you want to override defaults from (Cardinal) styles/imports/colors.css */
-
 :host footer {
     border-top: 1px solid #FFFFFF;
     background-color: #FFFFFF;
@@ -9,19 +6,7 @@
 
 :host(.pdfViewer) main,
 :host(.noPadding) main{
-    padding: 0!important;
-}
-
-:host(.fullHeightWithFooter) main {
-    height: calc(100vh - 11rem) !important;
-}
-
-:host(.fullHeightWithFooter) main .coloredBackground {
-    padding-top: 10px !important;
-}
-
-:host(.fullHeightWithoutFooter) main {
-    height: calc(100vh - 4rem)!important;
+    padding: 0 !important;
 }
 
 :host(.historyPage) main {
@@ -29,8 +14,10 @@
 }
 
 ::slotted(iframe) {
-    height: 100% !important;
-    width: 100% !important;
+    width: 100%; height: 100%;
+    border: 0 !important;
+    padding: 0;
+    margin: 0 0 -10px 0;
 }
 
 .mobile > main {
@@ -63,8 +50,7 @@
     background-color: #00345B !important;
 }
 
-.mobile > header .aside-toggler::after
-{
+.mobile > header .aside-toggler::after {
     color: #FFFFFF;
     content: "Electronic Product Information";
     padding-left: 85px;
@@ -82,7 +68,9 @@
     min-height: 39px !important;
 }
 
-/* :host(.background) main {
+/*
+:host(.background) main {
     background-image: url('/assets/images/Favorite.png');
     height: 100%;
-}  */
+}
+*/
