--- a/src/components/psk-slideshow/psk-slideshow.css
+++ b/src/components/psk-slideshow/psk-slideshow.css
@@ -2,12 +2,15 @@
     box-sizing: border-box;
 }
 
+.psk-slideshow {
+    height: 100%;
+}
+
 .psk-slideshow-container {
     margin: 0 auto;
     overflow: hidden;
-    width: 100%;
+    width: 100%; height: 100%;
     position: relative;
-    height: calc(100vh - 11rem) !important;
 }
 
 #psk-content-slider {
