--- a/src/components/psk-ssapp/psk-ssapp.css
+++ b/src/components/psk-ssapp/psk-ssapp.css
@@ -1,8 +1,9 @@
-psk-ssapp{
-    width: 100%;
-    height: 100%;
+psk-ssapp {
+    width: 100%; height: 100%;
 }
 
-iframe{
-    height: 99vh !important;
+iframe {
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    width: 100%; height: 100%;
 }
