--- a/src/components/psk-label/psk-label.css
+++ b/src/components/psk-label/psk-label.css
@@ -55,3 +55,17 @@ psk-label{
     justify-content: center;
     align-items: center;
 }
+
+.history-products-empty-list {
+    color: white;
+    font-size: 16px;
+    display: table;
+    margin: 0 auto;
+}
+
+.products-does-not-exist {
+    color: #00345B;
+    font-size: 16px;
+    display: table;
+    margin: 0 auto;
+}
