Added styles for latest version of Leaflet-Ssapp

--- a/src/components/psk-button-link/psk-button-link.css
+++ b/src/components/psk-button-link/psk-button-link.css
@@ -58,3 +58,9 @@ div {
     color: black;
     text-align-last: center!important;
 }
+
+.go-back-link .fa {
+    margin: 0;
+    font-size: 25px;
+    margin-right: 10px;
+}
