--- a/src/components/psk-form/psk-form.css
+++ b/src/components/psk-form/psk-form.css
@@ -9,13 +9,12 @@
 
 .scan-error-form {
     color: #00345B;
-    padding: 10px 20px;
 }
 
-.sca n-error-form .container{
+.scan-error-form .container{
     padding: 10px 20px;
 }
 
 .scan-error-message-label {
-    margin-bottom: 15px;
+    margin: 40px 0;
 }
