--- a/src/components/psk-example/psk-example.css
+++ b/src/components/psk-example/psk-example.css
@@ -17,9 +17,11 @@
 }
 
 :host(.mobile-example) .card-body .example-content {
-    margin: 0 auto; padding: 0;
-    width: 100%; height: 100%;
-    max-width: 380px;
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    max-width: 414px;
     overflow: hidden;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
 }
