--- a/src/components/psk-mobile/psk-mobile.css
+++ b/src/components/psk-mobile/psk-mobile.css
@@ -1,15 +1,15 @@
 :host footer {
     border-top: 1px solid #FFFFFF;
     background-color: #FFFFFF;
-    box-shadow: -1px 6px 29px -6px rgba(0,0,0,0.75);
+    box-shadow: -1px 6px 29px -6px rgba(0, 0, 0, 0.75);
 }
 
 :host(.pdfViewer) main,
-:host(.noPadding) main{
+:host(.noPadding) main {
     padding: 0 !important;
 }
 
-:host(.smpc-mobile) main{
+:host(.smpc-mobile) main {
     padding-right: 0 !important;
 }
 
@@ -17,8 +17,46 @@
     background-color: #134E9E !important;
 }
 
+:host webc-app-menu[mode=vertical] {
+    background: none !important;
+}
+
+.mobile webc-app-menu webc-app-identity {
+    display: none;
+}
+
+.mobile webc-app-menu[mode=vertical] .app-menu webc-app-menu-item,
+.mobile webc-app-menu[mode=vertical] .app-menu webc-app-menu-item a {
+    color: #FFF;
+}
+
+.mobile webc-app-menu[mode=vertical] .app-menu webc-app-menu-item a.link-active,
+.mobile webc-app-menu[mode=vertical] .app-menu webc-app-menu-item a.link-active:before {
+    color: #D6A229;
+}
+
+.mobile webc-app-menu webc-app-menu-item {
+    text-decoration: none;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 20px;
+    text-transform: uppercase;
+    margin-left: 30px;
+    padding: 7px 10px 7px 20px !important;
+}
+
+.mobile webc-app-menu webc-app-menu-item a:before {
+    content: "       ";
+    white-space: pre;
+    text-decoration: line-through;
+    position: absolute;
+    color: #FFFFFF;
+    padding-top: 15px;
+}
+
 ::slotted(iframe) {
-    width: 100%; height: 100%;
+    width: 100%;
+    height: 100%;
     border: 0 !important;
     padding: 0;
     margin: 0 0 -10px 0;
